Style: fixed page 2 viewport button visibility on smaller viewports

--- a/styles.scss
+++ b/styles.scss
@@ -149,20 +149,21 @@ form {
             transform: scale(0.99);
         }
         .payment-icon {
-            margin: 1em;
+            //margin: 1em;
             max-height: 40px;
             max-width: 40px;
         }
         .payment-button{
             flex-direction: column;
+            padding: 1em;
             > div {
-                margin: 1em;
-                div {
+                //margin: 1em;
+                div:not(:last-child) {
                     margin: .25em 0;
                 }
                 h2, .payment-rate {
                     transition-duration: 200ms;
-                    transform: translateY(8px);
+                    transform: translateY(0.8em);
                 }
 
             }
@@ -470,6 +471,9 @@ hr {
     }
     .payment-type {
         flex-direction: column;
+        .payment-button > div {
+            margin-left: 1em;
+        }
         .container {
             max-height: 100px;
             .discount {
@@ -500,6 +504,24 @@ hr {
     }
 }
 
+//Mobile Devices and small height viewport
+@media only screen and (max-width:425px) and (max-height:650px){
+    .payment-button {
+        padding: 1em .75em;
+        align-items: center;
+        max-height: 70px;
+    }
+    .payment-icon {
+        margin: 0;
+    }
+    form {
+        .payment-type {
+            .payment-button > div {
+                margin-right: 1em;
+            }
+        }
+    }
+}
 //Ipads
 @media only screen and (min-width:426px) and (max-width:980px){
     main {
@@ -557,6 +579,10 @@ hr {
         }
         
     }
+    .payment-button {
+        min-height: 180px;
+        justify-content: space-between;
+    }
 }
 
 //Larger Devices
@@ -570,3 +596,4 @@ hr {
         min-height: 600px;
     }
 }
+
